src/styles/utils.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  transition: background-color 1s ease;
  --marquee-width: 80vw;
  --marquee-height: 100vh;
  --marquee-elements-displayed: 5;
  --marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
  --marquee-animation-duration: calc(var(--marquee-elements) * 3s);
}

[data-theme="light"] {
  --color-bg: #dbd8d8;
  --color-header: #b1b1b1;
  --color-text: #363333;
  --color-content: #b3a392;
  --color-border: #363333;
}

[data-theme="dark"] {
  --color-bg: #393842;
  --color-header: #221f24;
  --color-text: #d3cece;
  --color-content: #6b6a6b;
  --color-border: #d3cece;
}

[data-theme="light"] #themePicker {
  transition: all 1s ease;
  transform: translateX(-30%);
}

[data-theme="dark"] #themePicker {
  transition: all 1s ease;
  transform: translateX(27%);
}

@layer utilities {
  .scrollbar::-webkit-scrollbar {
    width: 15px;
    height: 10px;
  }

  .scrollbar::-webkit-scrollbar-track {
    border-radius: 100vh;
    background: #cbcdd4;
  }

  .scrollbar::-webkit-scrollbar-thumb {
    background: #664fce;
    border-radius: 100vh;
    border: 3px solid #4f5055;
  }

  .scrollbar::-webkit-scrollbar-thumb:hover {
    background: #907bda;
  }
}

